add Vanta animation library

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,9 @@
    "cSpell.words": [
       "mixins",
       "tailwind"
+   ],
+   "cSpell.ignoreWords": [
+      "onclick",
+      "onhover"
    ]
 }
